# pdf-image-text

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/pdf-text-imgs/: __init__.py
src/pdf_image_text/: __init__.py  module.py  test.py
src/pdf_text_images/: __init__.py  module.py  test.py
